--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
     border: 1px solid yellow; 
     margin: auto;
     margin-top: 2%;
-    width: 50%;
+    width: 80%;
     height: 50%;
     border-radius: 10%;
     padding: 2%;
@@ -14,17 +14,19 @@
 }
 
 .fondoBatalla{
-    margin:auto; 
-    width: 880px; 
+    /* margin:auto; */
+    margin: 0% 0% 0% 20%;
+    width: 900px; 
     height: 500px; 
     background-image:url('https://pbs.twimg.com/media/DVMT-6OXcAE2rZY.jpg');
 }
 
 .sidenav {
-    height: 85%;
+    height: 75%;
     width: 225px;
     position: fixed;
-    margin-top: 7%;
+    margin-top: 8%;
+    margin-left:1%;
     z-index: 1;
     top: 0;
     left: 0;
@@ -32,14 +34,63 @@
     overflow-x: hidden;
     padding-top: 20px;
     border-radius: 10%;
-    border: 4px solid green;
+    border: 3px solid rgb(194, 191, 19);
   }
+
+  .sidenavLuchaPokemon {
+    height: 55%;
+    width: 225px;
+    position: fixed;
+    margin-top: 12%;
+    margin-left:1%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    padding-top: 10px;
+    border-radius: 10%;
+    border: 3px solid rgb(194, 191, 19);
+  }
+
+  .sidenavcambiaPokemon1 {
+    height: 65%;
+    width: 225px;
+    position: fixed;
+    margin-top: 9%;
+    margin-left:1%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    padding-top: 10px;
+    border-radius: 10%;
+    border: 3px solid rgb(194, 191, 19);
+  }
+
+  .sidenavcambiaPokemon2 {
+    height: 85%;
+    width: 225px;
+    position: fixed;
+    margin-top: 7%;
+    margin-left:1%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    padding-top: 10px;
+    border-radius: 10%;
+    border: 3px solid rgb(194, 191, 19);
+  }
+
+
 
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav button {font-size: 18px;}
   }
-
 
   .menuBtnBatalla{
     font-size: 20px;
@@ -51,7 +102,7 @@
   }
 
   .btnCambiaPokemon{
-    font-size: 20px;
+    font-size: 120%;
     margin: auto;
     margin-bottom: 3%;
     margin-top: 10%;
@@ -62,9 +113,9 @@
   }
 
   .btnLuchaPokemon{
-    font-size: 20px;
+    font-size: 120%;
     margin: auto;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     width: 90%;
     border: 1px solid black;
     border-radius: 5%;
@@ -99,6 +150,10 @@
   }
   .btnNormal{
     background-color: rgb(122, 144, 116);
+  }
+  .btnSiniestro{
+    background-color: rgb(26, 27, 26);
+    color:white;
   }
 
   /* Estilos barra de progreo */
