--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Stylish&display=swap');
+
+
 .btnMenu{
     border: 1px solid yellow; 
     margin: auto;
@@ -13,6 +16,39 @@
     margin-right: 5%;
 }
 
+
+
+.animated {
+  -webkit-animation-duration: 0.7s;
+  animation-duration: 0.7s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+
 .fondoBatalla{
     /* margin:auto; */
     margin: 0% 0% 0% 20%;
@@ -22,8 +58,8 @@
 }
 
 .sidenav {
-    height: 75%;
-    width: 225px;
+    height: 78%;
+    width: 230px;
     position: fixed;
     margin-top: 8%;
     margin-left:1%;
@@ -38,8 +74,8 @@
   }
 
   .sidenavLuchaPokemon {
-    height: 55%;
-    width: 225px;
+    height: 70%;
+    width: 230px;
     position: fixed;
     margin-top: 12%;
     margin-left:1%;
@@ -55,7 +91,7 @@
 
   .sidenavcambiaPokemon1 {
     height: 65%;
-    width: 225px;
+    width: 230px;
     position: fixed;
     margin-top: 9%;
     margin-left:1%;
@@ -98,7 +134,8 @@
     width: 90%;
     color: black;
     display: block;
-    border-radius: 40%;
+    border-radius: 30%;
+    border: 1px solid black;
   }
 
   .btnCambiaPokemon{
@@ -113,7 +150,7 @@
   }
 
   .btnLuchaPokemon{
-    font-size: 120%;
+    font-size: 110%;
     margin: auto;
     margin-bottom: 5%;
     width: 90%;
@@ -125,6 +162,83 @@
   #btnEfectoGrande:hover{
     color: white
   }  
+
+  .btnVolverAtras{
+    display: block;
+  width:4%;
+  float:left;
+  margin-left: 3%;
+  position: fixed;
+
+  }
+
+  .infoPokedex{
+    margin:auto;
+    border-radius: 7%;
+    border:2px solid yellow;
+    width:70%; 
+    height:800px; 
+    background-image:url("http://i.imgur.com/adJyfqI.jpg");
+    background-position: center;
+    background-repeat:no-repeat;
+    background-position:center;
+    background-attachment: fixed;
+    background-size: cover;
+    padding:1%
+  }
+
+  .imgsPokedexInfo{
+    border: 4px solid rgb(37, 168, 207);
+    border-radius:5%;
+    padding:1%;
+    text-align:center;
+    background-color: rgba(240, 245, 243, 0.726);
+    
+  }
+
+  .datosPokemons{
+    border:2px solid green;
+    float:left; 
+    border-radius:5%; 
+    margin-right: 2%; 
+    padding:1%;
+    cursor: pointer;
+  }
+
+  .statsDatos{
+    float: left;
+    display: block;
+    border-radius:5%; 
+    border:2px solid rgb(163, 159, 159);
+    padding: 1%;
+    margin-left:3%;
+    margin-bottom: 2%;
+    background-color: rgb(77, 84, 97);
+    color: white;
+  }
+
+  .statsDatos:hover{
+    background-color: rgb(12, 12, 12);
+    cursor: pointer;
+  }
+
+  .subTitulosInfoPokedex{
+    float: left;
+    margin-left:10%;
+    font-family: 'Stylish', sans-serif;
+    font-size: 150%;
+  }
+
+  .hrPokedex{
+    border:1px solid rgb(122, 121, 121);
+  }
+
+  .disabled{
+    cursor: not-allowed;
+    border: outset 2px gray;
+    background-color: rgb(185, 185, 185) !important;
+  }
+
 
   /* Lista de colores para los botones por tipo */
   .btnFuego{
@@ -149,7 +263,7 @@
     background-color: rgb(211, 151, 102);
   }
   .btnNormal{
-    background-color: rgb(122, 144, 116);
+    background-color: rgb(238, 191, 217);
   }
   .btnSiniestro{
     background-color: rgb(26, 27, 26);
