--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,7 +53,7 @@
     /* margin:auto; */
     margin: 0% 0% 0% 20%;
     width: 900px; 
-    height: 500px; 
+    height: 515px; 
     background-image:url('https://pbs.twimg.com/media/DVMT-6OXcAE2rZY.jpg');
 }
 
@@ -197,30 +197,34 @@
   }
 
   .datosPokemons{
-    border:2px solid green;
-    float:left; 
+    border:2px solid rgb(5, 75, 5);
+    display: block;
     border-radius:5%; 
-    margin-right: 2%; 
     padding:1%;
+    margin: auto;
+    margin-bottom: 2%;
+    background-color: rgb(151, 206, 146);
     cursor: pointer;
   }
+
+  img.pequeña{
+    width: 60px; height: 60px;
+  }
+
 
   .statsDatos{
     float: left;
     display: block;
-    border-radius:5%; 
-    border:2px solid rgb(163, 159, 159);
+    border-radius:10%; 
+    border:2px solid rgb(5, 75, 5);
     padding: 1%;
-    margin-left:3%;
-    margin-bottom: 2%;
-    background-color: rgb(77, 84, 97);
-    color: white;
+    margin-left:6%;
+    margin-bottom: 3%;
+    background-color: rgb(151, 206, 146);
+    color: rgb(15, 15, 15);
+    width: 30%
   }
 
-  .statsDatos:hover{
-    background-color: rgb(12, 12, 12);
-    cursor: pointer;
-  }
 
   .subTitulosInfoPokedex{
     float: left;
@@ -292,7 +296,7 @@
   }
   
   progress::-webkit-progress-bar {
-    background: rgb(197, 195, 195);
+    background: rgb(141, 138, 138);
   }
 
 
