--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,7 +53,7 @@
     /* margin:auto; */
     margin: 0% 0% 0% 20%;
     width: 900px; 
-    height: 515px; 
+    height: 510px; 
     background-image:url('https://pbs.twimg.com/media/DVMT-6OXcAE2rZY.jpg');
 }
 
@@ -71,6 +71,23 @@
     padding-top: 20px;
     border-radius: 10%;
     border: 3px solid rgb(194, 191, 19);
+  }
+
+  .sidenavHide {
+    height: 78%;
+    width: 230px;
+    position: fixed;
+    margin-top: 8%;
+    margin-left:1%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    padding-top: 20px;
+    border-radius: 10%;
+    border: 3px solid rgb(194, 191, 19);
+    visibility: hidden;
   }
 
   .sidenavLuchaPokemon {
@@ -245,6 +262,10 @@
 
 
   /* Lista de colores para los botones por tipo */
+  
+  .btnNormal{
+    background-color: rgb(236, 203, 223);
+  }
   .btnFuego{
     background-color: rgb(218, 131, 131);
   }
@@ -257,7 +278,7 @@
   .btnElectrico{
     background-color: rgb(208, 230, 112);
   }
-  .btnInsecto{
+  .btnBicho{
     background-color: rgb(42, 153, 66);
   }
   .btnAcero{
@@ -266,12 +287,41 @@
   .btnTierra{
     background-color: rgb(211, 151, 102);
   }
-  .btnNormal{
-    background-color: rgb(238, 191, 217);
-  }
   .btnSiniestro{
     background-color: rgb(26, 27, 26);
     color:white;
+  }
+  .btnLucha{
+    background-color: rgb(190, 101, 81);
+  }
+  .btnVolador{
+    background-color: rgb(136, 196, 224);
+  }
+  .btnVeneno{
+    background-color: rgb(162, 131, 236);
+  }
+  .btnRoca{
+    background-color: rgb(104, 42, 40);
+    color: white;
+  }
+  .btnFantasma{
+    background-color: rgb(78, 11, 122);
+    color: white;
+  }
+  .btnPsiquico{
+    background-color: rgb(237, 145, 240);
+  }
+  .btnHielo{
+    background-color: rgb(195, 238, 232);
+  }
+  .btnDragon{
+    background-color: rgb(40, 11, 97);
+    color: white;
+  }
+  .btnHada{
+    background-color: rgb(40, 11, 97);
+    color: rgba(221, 68, 213, 0.897);
+    color: white;
   }
 
   /* Estilos barra de progreo */
