--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -180,12 +180,12 @@
     color: white
   }  
 
-  .btnVolverAtras{
+  .btnVolverAtras{ 
     display: block;
-  width:4%;
-  float:left;
-  margin-left: 3%;
-  position: fixed;
+    width:4%;
+    float:left;
+    margin-left: 3%;
+    position: fixed;
 
   }
 
@@ -194,7 +194,7 @@
     border-radius: 7%;
     border:2px solid yellow;
     width:70%; 
-    height:800px; 
+    height:950px; 
     background-image:url("http://i.imgur.com/adJyfqI.jpg");
     background-position: center;
     background-repeat:no-repeat;
@@ -202,6 +202,29 @@
     background-attachment: fixed;
     background-size: cover;
     padding:1%
+  }
+
+  .infoStastMOvePokemon{
+    height: 970px;
+    margin:auto;
+    border-radius: 7%;
+    border:2px solid yellow;
+    width:70%; 
+    background-image:url("http://i.imgur.com/adJyfqI.jpg");
+    background-position: center;
+    background-repeat:no-repeat;
+    background-position:center;
+    background-attachment: fixed;
+    background-size: cover;
+    padding:1%
+  }
+
+  .cardMoves{
+    background-color: white;
+    padding: 1%;
+    border: 1px solid blue;
+    margin: 1%;
+    border-radius: 3%;
   }
 
   .imgsPokedexInfo{
@@ -249,6 +272,7 @@
     font-family: 'Stylish', sans-serif;
     font-size: 150%;
   }
+
 
   .hrPokedex{
     border:1px solid rgb(122, 121, 121);
